--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,9 +43,21 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    # - assets/
+    - assets/africa/
+
+    - assets/antarctica/
+
+    - assets/asia/
+
+    - assets/europe/
+
+    - assets/northamerica/
+
+    - assets/oceania/
+    
+    - assets/southamerica/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -58,20 +70,17 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
+
   fonts:
     - family: Neonderthaw
       fonts:
-        - asset: assets/fonts/Neonderthaw-Regular.ttf
+        - asset: assets\fonts\Neonderthaw-Regular.ttf
+
     - family: Raleway
       fonts:
         - asset: assets/fonts/Raleway-Italic-VariableFont_wght.ttf
         - asset: assets/fonts/Raleway-VariableFont_wght.ttf
 
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
